Added BFLA scanner and PATCH method support